fix: height bug
fix white strip on the bottom of the page that appears when the components doesn't fit on screen

--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,4 @@
 
 html, body, #root {
   width: 100vw;
-  height: 100vh;
 }
